src/public/sass/layout/_calendar.scss
$shadow: rgba(0, 0, 0, 0.1) 0 2px 4px, rgba(0, 0, 0, 0.1) 0 0 3px;

.calendar {
    &__table {
        width: 100%;
        table-layout: fixed;
        box-shadow: $shadow;
        tr {
            & td {
                height: 130px;
                vertical-align: top;
                font-size: 14px;
                &:not(:last-child) {
                    border-right: 1px solid $black;
                }
                @include media-breakpoint-down(md) {
                    height: 50px;
                    &.highlight {
                        background-color: $amber;
                    }
                }
                &.highlight {
                    background-color: rgba($amber, 0.5);
                }
            }
            @include media-breakpoint-down(md) {
                border-bottom: 1px solid $black;
                &:last-child {
                    border-bottom: 0;
                }
            }
        }
    }
    &__weekday {
        background-color: $deeppurple;
        color: $white;
        padding: 7px 12px;
        font-size: 0.8em;
        text-align: center;
    }
    &__date {
        background-color: $gray;
        padding: 5px;
        font-size: 13px;
        height: 28px;
    }
    &__day {
        &-othermonth {
            opacity: 0.5;
        }
    }
    &__cell {
        padding: 5px;
        @include media-breakpoint-down(md) {
            text-align: center;
        }
        ul {
            list-style: none;
            padding: 0;
            margin: 0;
            li {
                &:not(:last-child) {
                    padding-bottom: 10px;
                }
                &.watched {
                    text-decoration: line-through;
                    opacity: 0.5;
                }
            }
        }
        &--checkbox {
            display: inline-block;
            padding-right: 0.3em;
        }
        &--episode {
            font-size: 0.8em;
        }
        &--tvshow {
            font-weight: bold;
        }
        &--dot {
            display: inline-block;
            height: 6px;
            width: 6px;
            border-radius: 6px;
            margin: 1px;
            background-color: black;
            &.red {
                background-color: red;
            }
            &.green {
                background-color: green;
            }
            &.watched {
                opacity: 0.4;
            }
        }
    }
    &__eplist {
        list-style: none;
        padding: 0;
        margin: 0;
        li {
            border: 1px solid $gray-500;
            padding: 10px 10px;
            height: 70px;
        }
    }
}

.month-nav-header {
    display: flex;
    justify-content: center;
    align-items: center;
}

.month-nav {
    width: 40%;
}

